ALB-Ingress-Path-based-Canary-Strategy/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facebook-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: facebook
      version: v1
  template:
    metadata:
      labels:
        app: facebook
        version: v1
    spec:
      containers:
      - name: facebook
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facebook-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: facebook
      version: v2
  template:
    metadata:
      labels:
        app: facebook
        version: v2
    spec:
      containers:
      - name: facebook
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
