ALB-Ingress-Path-based-Canary-Strategy/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagram-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instagram
      version: v1
  template:
    metadata:
      labels:
        app: instagram
        version: v1
    spec:
      containers:
      - name: instagram
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instagram-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: instagram
      version: v2
  template:
    metadata:
      labels:
        app: instagram
        version: v2
    spec:
      containers:
      - name: instagram
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 8080
