ALB-Ingress-Path-based-Canary-Strategy/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: facebook-v1-svc
spec:
  selector:
    app: facebook
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: facebook-v2-svc
spec:
  selector:
    app: facebook
    version: v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
