ALB-Ingress-Path-based-Canary-Strategy/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: instagram-v1-svc
spec:
  selector:
    app: instagram
    version: v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: instagram-v2-svc
spec:
  selector:
    app: instagram
    version: v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
