ALB-Ingress-Path-based-Canary-Strategy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-rules
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:992382659631:certificate/036f401e-63a2-48c4-8759-8b8ed7dadd08
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/actions.weighted-routing-app1: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {
              "serviceName": "facebook-v1-svc",
              "servicePort": 8080,
              "weight": 10
            },
            {
              "serviceName": "facebook-v2-svc",
              "servicePort": 8080,
              "weight": 90
            }
          ]
        },
        "targetGroupStickinessConfig": {
          "enabled": false
        }
      }

    alb.ingress.kubernetes.io/actions.weighted-routing-app2: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {
              "serviceName": "instagram-v1-svc",
              "servicePort": 8080,
              "weight": 50
            },
            {
              "serviceName": "instagram-v2-svc",
              "servicePort": 8080,
              "weight": 50
            }
          ]
        },
        "targetGroupStickinessConfig": {
          "enabled": false
        }
      }
      
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
        - path: /facebook
          pathType: Prefix
          backend:
            service:
              name: weighted-routing-app1
              port:
                name: use-annotation

        - path: /instagram
          pathType: Prefix
          backend:
            service:
              name: weighted-routing-app2
              port:
                name: use-annotation
